fix: Add scheduler mock support and fix Java 17 compatibility
Co-authored-by: SrBedrock <51332006+SrBedrock@users.noreply.github.com>