@@ -62,7 +62,7 @@ public class PlayerWinEvent extends Event {
      * @return the winner of the event
      */
     public Warrior getPlayer() {
-        return players.getFirst();
+        return players.get(0);
     }
 
     /**
